<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/common_l_spacing"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/yc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="@dimen/common_l_spacing"
            android:background="@drawable/background_selector">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:srcCompat="@mipmap/ic_app"
                android:layout_weight="3"
                android:src="@drawable/league_yc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/l_text_size"
                android:text="@string/yc"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/yj"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="@dimen/common_l_spacing"
            android:background="@drawable/background_selector">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:srcCompat="@mipmap/ic_app"
                android:layout_weight="3"
                android:src="@drawable/league_yj" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/l_text_size"
                android:text="@string/yj"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fj"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="@dimen/common_l_spacing"
            android:background="@drawable/background_selector">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:srcCompat="@mipmap/ic_app"
                android:layout_weight="3"
                android:src="@drawable/league_fj" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/l_text_size"
                android:text="@string/fj"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/xj"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="@dimen/common_l_spacing"
            android:background="@drawable/background_selector">



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:srcCompat="@mipmap/ic_app"
                android:layout_weight="3"
                android:src="@drawable/league_xj" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/l_text_size"
                android:text="@string/xj"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dj"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="@dimen/common_l_spacing"
            android:background="@drawable/background_selector">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:srcCompat="@mipmap/ic_app"
                android:layout_weight="3"
                android:src="@drawable/league_dj" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/l_text_size"
                android:text="@string/dj"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/zc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="@dimen/common_l_spacing"
            android:background="@drawable/background_selector">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:srcCompat="@mipmap/ic_app"
                android:layout_weight="3"
                android:src="@drawable/league_zc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/l_text_size"
                android:text="@string/zc"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>